Sphere Area Done

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -8,3 +8,7 @@
 /Topic.class
 /MultiplicationSeries.class
 /TwoPowerN.class
+/CircleVolume.class
+/FibonacciSubscriber.class
+/LucaSeries.class
+/SphereArea.class
